--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@
 #                                                 /____/
 #
 # Title of your website
-title: 'SEMESO 2024'
+title: 'SEMESO 2025'
 
 # The slogan describes your website and is used on homepage in <title> and other important places
-slogan: 'XI Seminário de Engenharia de Software'
+slogan: 'XII Seminário de Engenharia de Software'
 
 # The description is used on homepage and in the footer to quickly describe your website. Use a maximum of 150 characters for SEO-purposes.
 description: 'O SEMESO é um evento com palestras e minicursos na área de Engenharia de Software.'
@@ -19,14 +19,13 @@ description: 'O SEMESO é um evento com palestras e minicursos na área de Engen
 # The credits show up in the includes/_footer.html – It would be nice of you to leave a link to Phlow or Feeling Responsive as a thank you :)
 credits: '<p>Based on <a href="http://phlow.github.io/feeling-responsive/">Feeling Responsive</a> by <a href="http://phlow.de/">Phlow</a>.</p>'
 
-
 # Main author of the website
 # See > authors.yml
 author: fds
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://semeso.github.io/2024'
+url: 'https://semeso.github.io/2025'
 baseurl: ''
 
 # This is for the editing function in _/includes/improve_content
@@ -41,16 +40,14 @@ improve_content: https://github.com/semeso/2024/edit/gh-pages
 #
 urlimg: 'https://semeso.github.io/2024/images/'
 
-
 # Logo size is 600x80 pixels
-logo: "logo.png"
+logo: 'logo.png'
 
 # Plugins
 plugins:
     - jekyll-asciidoc
     - jekyll-gist
     - jekyll-paginate
-
 
 #       ____              _             __  _
 #      / __ \____ _____ _(_)___  ____ _/ /_(_)___  ____
@@ -59,16 +56,15 @@ plugins:
 #   /_/    \__,_/\__, /_/_/ /_/\__,_/\__/_/\____/_/ /_/
 #               /____/
 #
-paginate: 5                      # Paginates all X entries
-paginate_path: "blog/page:num"   # Pagination path › Important for blog page in /blog/ to work
-
+paginate: 5 # Paginates all X entries
+paginate_path: 'blog/page:num' # Pagination path › Important for blog page in /blog/ to work
 
 # Theme works best with Kramdown (using the table of contents function)
-markdown           : kramdown
-permalink          : /:categories/:title/
-highlight          : rouge
-excerpt_separator  : "<!--more-->"
-include            : ['.htaccess']
+markdown: kramdown
+permalink: /:categories/:title/
+highlight: rouge
+excerpt_separator: '<!--more-->'
+include: ['.htaccess']
 # Exclude these files from your production _site
 exclude:
     - .sass-cache
@@ -79,21 +75,18 @@ exclude:
     - INSTALL.md
     - vendor
 
-
 # The language setting is used in /includes/header.html for html-settings
 language: 'pt_BR'
-
 
 # Used › default.html front-matter and compress.html
 # Options › http://jch.penibelst.de
 compress_html:
-  clippings: all
-  comments: ["<!-- ", " -->"]
-  endings: all
-  profile: false
-  ignore:
-    envs: [development]
-
+    clippings: all
+    comments: ['<!-- ', ' -->']
+    endings: all
+    profile: false
+    ignore:
+        envs: [development]
 
 #
 #       ____       ____            ____
@@ -105,26 +98,22 @@ compress_html:
 # Default Settings
 
 defaults:
-  -
-    scope:
-      path: '' 				# an empty string here means all files in the project
-      type: 'pages'
-    values:
-      show_meta: false 	# Hide metadata for all pages
-      # sidebar:    		# Possible values › left, right › by default there will be no sidebar
-      comments: false
-      author: phlow     # Default author for pages
-  -
-    scope:
-      path: ''
-      type: 'posts'
-    values:
-      show_meta: true   # Show metadata for all posts
-      # sidebar:        # Possible values › left, right › by default there will be no sidebar
-      comments: false
-      author: phlow     # Default author for posts
-
-
+    - scope:
+          path: '' # an empty string here means all files in the project
+          type: 'pages'
+      values:
+          show_meta: false # Hide metadata for all pages
+          # sidebar:    		# Possible values › left, right › by default there will be no sidebar
+          comments: false
+          author: phlow # Default author for pages
+    - scope:
+          path: ''
+          type: 'posts'
+      values:
+          show_meta: true # Show metadata for all posts
+          # sidebar:        # Possible values › left, right › by default there will be no sidebar
+          comments: false
+          author: phlow # Default author for posts
 
 #       _   __            _             __  _
 #      / | / /___ __   __(_)___ _____ _/ /_(_)___  ____
@@ -135,8 +124,6 @@ defaults:
 #
 #  Open _data/navigation.yml to adjust the left and right topbar navigation
 #
-
-
 
 #     _____ __________
 #    / ___// ____/ __ \
@@ -150,8 +137,6 @@ defaults:
 # yandex_site_verification      : ''
 # alexa_verify_id               : ''
 
-
-
 #       ______            _
 #      / ____/___ __   __(_)________  ____  _____
 #     / /_  / __ `/ | / / / ___/ __ \/ __ \/ ___/
@@ -159,19 +144,18 @@ defaults:
 #   /_/    \__,_/ |___/_/\___/\____/_/ /_/____/   Favicon-Crap: Favicons, Chrome, Android & Apple Touch Buttons
 #                                                 More information » https://mathiasbynens.be/notes/touch-icons
 
-favicon-32x32                        : 'favicon-32x32.png'
-touch-icon-192x192                   : 'touch-icon-192x192.png'
-apple-touch-icon-180x180-precomposed : 'apple-touch-icon-180x180-precomposed.png'
-apple-touch-icon-152x152-precomposed : 'apple-touch-icon-152x152-precomposed.png'
-apple-touch-icon-144x144-precomposed : 'apple-touch-icon-144x144-precomposed.png'
-apple-touch-icon-120x120-precomposed : 'apple-touch-icon-120x120-precomposed.png'
-apple-touch-icon-114x114-precomposed : 'apple-touch-icon-114x114-precomposed.png'
-apple-touch-icon-76x76-precomposed   : 'apple-touch-icon-76x76-precomposed.png'
-apple-touch-icon-72x72-precomposed   : 'apple-touch-icon-72x72-precomposed.png'
-apple-touch-icon-precomposed         : 'apple-touch-icon-precomposed.png'
-msapplication_tileimage              : 'msapplication_tileimage.png'               # Size 144x144
-msapplication_tilecolor              : '#fabb00'
-
+favicon-32x32: 'favicon-32x32.png'
+touch-icon-192x192: 'touch-icon-192x192.png'
+apple-touch-icon-180x180-precomposed: 'apple-touch-icon-180x180-precomposed.png'
+apple-touch-icon-152x152-precomposed: 'apple-touch-icon-152x152-precomposed.png'
+apple-touch-icon-144x144-precomposed: 'apple-touch-icon-144x144-precomposed.png'
+apple-touch-icon-120x120-precomposed: 'apple-touch-icon-120x120-precomposed.png'
+apple-touch-icon-114x114-precomposed: 'apple-touch-icon-114x114-precomposed.png'
+apple-touch-icon-76x76-precomposed: 'apple-touch-icon-76x76-precomposed.png'
+apple-touch-icon-72x72-precomposed: 'apple-touch-icon-72x72-precomposed.png'
+apple-touch-icon-precomposed: 'apple-touch-icon-precomposed.png'
+msapplication_tileimage: 'msapplication_tileimage.png' # Size 144x144
+msapplication_tilecolor: '#fabb00'
 
 #       ______                __                __
 #      / ____/___ _________  / /_  ____  ____  / /__
@@ -179,10 +163,9 @@ msapplication_tilecolor              : '#fabb00'
 #    / __/ / /_/ / /__/  __/ /_/ / /_/ / /_/ / ,<
 #   /_/    \__,_/\___/\___/_.___/\____/\____/_/|_|      Facebook-Optimization › http://j.mp/fb_optimize
 
-og_image                             : #'http://images.phlow.de/phlow/phlow_de-logo-512x.png'
-og_locale                            : 'pt_BR'
-og_type                              : 'website'
-
+og_image: #'http://images.phlow.de/phlow/phlow_de-logo-512x.png'
+og_locale: 'pt_BR'
+og_type: 'website'
 
 #      _____            _       __   __  ___         ___
 #     / ___/____  _____(_)___ _/ /  /  |/  /__  ____/ (_)___ _
@@ -194,9 +177,8 @@ og_type                              : 'website'
 #
 
 socialmedia:
-    twitter   : udesc_engsoftwr
-    facebook  : udesc.engsoftware
-
+    twitter: udesc_engsoftwr
+    facebook: udesc.engsoftware
 
 #        ____  _
 #       / __ \(_)________ ___  _______
@@ -207,8 +189,7 @@ socialmedia:
 #
 # used in _includes/comments
 
-# disqus_shortname: 
-
+# disqus_shortname:
 
 #      _____
 #     / ___/____ ___________
@@ -218,9 +199,8 @@ socialmedia:
 #
 
 sass:
-    sass_dir : _sass
-    style    : :compressed
-
+    sass_dir: _sass
+    style: :compressed
 
 #       ___                __      __  _
 #      /   |  ____  ____ _/ /_  __/ /_(_)_________
@@ -232,8 +212,6 @@ sass:
 # used in _includes/footer_scripts
 
 google_analytics_tracking_id: G-NW4GWYN94E
-
-
 
 #   _                 _     _
 #  | |_ __ ___      _| | __| |_ ___
@@ -249,7 +227,6 @@ google_analytics_tracking_id: G-NW4GWYN94E
 # used in _includes/footer_scripts
 
 # tawkto_embed_uri:
-
 
 #     ___              _     __           __
 #    /   |  __________(_)___/ /___  _____/ /_____  _____
@@ -267,8 +244,8 @@ google_analytics_tracking_id: G-NW4GWYN94E
 
 asciidoctor-enabled: false
 asciidoctor:
-  description: 
-  attributes:
-    source-highlighter: coderay
-    coderay-css: style
-    icons: font
+    description:
+    attributes:
+        source-highlighter: coderay
+        coderay-css: style
+        icons: font
