feature: adiciona parcialmente estrutura de cards para ser utilizada na apresentação de palestras e minicursos Implementa animação para abertura dos cards e visualização das informações Corrige estrutura markdown para animação AOS ativar sobre todo o texto

--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,11 @@ author: fds
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
 url: 'https://semeso.github.io/2025'
-baseurl: ''
+baseurl: '/2025'
 
 # This is for the editing function in _/includes/improve_content
 # Leave it empty if your site is not on GitHub/GitHub Pages
-improve_content: https://github.com/semeso/2024/edit/gh-pages
+improve_content: https://github.com/semeso/2025/edit/gh-pages
 
 # This URL points directly to the images directory making
 # things easier to link to images in posts and templates. It needs a slash at the end.
@@ -38,7 +38,7 @@ improve_content: https://github.com/semeso/2024/edit/gh-pages
 # Example: <img src="{{ site.urlimg }}{{ post.image.title }}" />
 # Markdown-Example for posts ![Image Text]({{ site.urlimg }}image.jpg)
 #
-urlimg: 'https://semeso.github.io/2024/images/'
+urlimg: 'https://semeso.github.io/2025/images/'
 
 # Logo size is 600x80 pixels
 logo: 'logo.png'
