--- a/_config.yml
+++ b/_config.yml
@@ -49,6 +49,13 @@ plugins:
     - jekyll-gist
     - jekyll-paginate
 
+collections:
+    minicursos:
+        output: false
+        sort_by: date
+    palestras:
+        output: false
+
 #       ____              _             __  _
 #      / __ \____ _____ _(_)___  ____ _/ /_(_)___  ____
 #     / /_/ / __ `/ __ `/ / __ \/ __ `/ __/ / __ \/ __ \
