feat: modulariza cards e informações das palestras TODO: estruturar a programação do evento da mesma forma refatorar lógica dos links para se adequar à nova estrutura

--- a/_config.yml
+++ b/_config.yml
@@ -55,6 +55,7 @@ collections:
         sort_by: date
     palestras:
         output: false
+        sort_by: date
 
 #       ____              _             __  _
 #      / __ \____ _____ _(_)___  ____ _/ /_(_)___  ____
