--- a/_config.yml
+++ b/_config.yml
@@ -56,6 +56,8 @@ collections:
     palestras:
         output: false
         sort_by: date
+    programacao:
+        output: false
 
 #       ____              _             __  _
 #      / __ \____ _____ _(_)___  ____ _/ /_(_)___  ____
