feat: altera esquema de cores do site

--- a/_data/links.yml
+++ b/_data/links.yml
@@ -33,8 +33,8 @@ panorama: https://www.panoramasistemas.com.br # Empresa Panorama
 valerinas: https://meninas.sbc.org.br/projetos-parceiros/valerinas/ # Site das Valerinas
 visitapanorama: https://forms.office.com/r/wzEHTnceRq # Formulário de visita à Panorama
 labot: https://www.udesc.br/ceavi/acoes-de-extensao/atuais/labot # Página do Labot
-fotos: '/2025/fotos' # Galeria de fotos
-certificados: '/2025/certificados' # Página de certificados
+fotos: '/fotos' # Galeria de fotos
+certificados: '/certificados' # Página de certificados
 formavaliacao: https://forms.office.com/r/nJX5Kbf8hp # Formulário de avaliação do evento
 
 # Links da programação - Palestras
