fix: corrige a url do site

--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author: fds
 
 # This URL is the main address for absolute links. Don't include a slash at the end.
 #
-url: 'https://semeso.github.io/2025'
+url: 'https://semeso.github.io'
 baseurl: '/2025'
 
 # This is for the editing function in _/includes/improve_content
