feat: adiciona conteúdo nas páginas de hackathon e gamificação. Adiciona o sic como uma palestra. Aumenta o tamanho da logo da effecti

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,20 +14,20 @@
   url: '/minicursos/'
   side: left
 
+- title: Hackathon
+  url: '/hackathon/'
+  side: left
+
+- title: Gamificação
+  url: '/gamificacao/'
+  side: left
+
 - title: Inscrições
   url: '/inscricoes/'
   side: left
 
 - title: Certificados
   url: '/certificados/'
-  side: left
-
-- title: Hackathon
-  url: '/hackathon/'
-  side: left
-
-- title: SIC
-  url: '/sic/'
   side: left
 
 - title: Fotos
