inclusao da visita tecnica na programacao

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,8 @@
     url: '/minicursos/'
   - title: 'Hackathon'
     url: '/hackathon/'
+  - title: 'Visita Técnica'
+    url: '/visita-tecnica/'
 
 - title: Inscrições
   url: '/inscricoes/'
